# param_optim_study_draft

./: .gitignore  README.md  pyproject.toml
configs_template/: conf_thresh_config_template.yaml  eval_config_template.yaml  full_config_template.yaml  model_config_template.yaml  nms_config_template.yaml  optimization_config_template.py  predict_config_template.yaml  train_config_template.yaml
lt_lib/architecture/: anchor_utils.py  retinanet.py  utils.py
lt_lib/core/: confidence_thresholding.py  eval.py  initialize_model.py  initialize_task.py  matching.py  metrics.py  nms.py  predict.py  train.py
lt_lib/data/: data_extraction.py  data_utils.py  datasets.py  preprocessing.py  tiling.py
lt_lib/entrypoints/: optimization.py  run.py
lt_lib/optimization/: objective.py  ray_run_config.py  update_configs.py
lt_lib/orchestration/: task_orchestrator.py
lt_lib/schemas/: base_schemas.py  config_files_schemas.py  model_schemas.py  task_schemas.py
lt_lib/utils/: dict_utils.py  load_and_save.py  log.py  regex_matcher.py  shuting_yard_algorithm.py  update_outdated_objects.py  wandb_init.py
lt_lib/viz/: dataset_viz.ipynb  display_image.ipynb  draw_bboxes.py  experiment_viz.ipynb  experiment_viz_utils.py  experiments_viz.ipynb  plot_utils.py  save_and_display_image.py
notebooks/: optimization.ipynb  preprocessing.ipynb  run.ipynb  test.ipynb
