[tool.poetry]
name = "lt-lib"
version = "0.1.0"
description = "Draft environment and of the master thesis."
authors = ["Lodjic <loic.thiriet@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.7"
torch = "^2.1.0"
torchvision = "^0.16.2"
GDAL = "^3.8.3"
numpy = "^1.26.3"
scipy = "^1.12.0"
pandas = "^2.2.0"
polars = "^0.20.6"
pyarrow = "^15.0.0"
geopandas = "^0.14.2"
shapely = "^2.0.2"
albumentations = "^1.3.1"
scikit-learn = "^1.4.0"
opencv-python = "^4.9.0.80"
loguru = "^0.7.2"
"ruamel.yaml" = "^0.18.5"
pydantic = "^2.6.0"
optuna = "^3.5.0"
ray = "^2.9.3"
wandb = "^0.16.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.0"
ipywidgets = "^8.1.1"
nbformat = "^5.9.2"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
plotly = "^5.18.0"
SciencePlots = "^2.1.1"
pybboxes = "^0.1.6"
pillow = "^10.2.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
